--- a/WebProgrammingProject/WebProgrammingProject.csproj
+++ b/WebProgrammingProject/WebProgrammingProject.csproj
@@ -14,6 +14,8 @@
     <Compile Remove="Data\Migrations\20201228152258_MotorCultureMigr.Designer.cs" />
     <Compile Remove="Data\Migrations\20201228153307_MotorCultureMigration.cs" />
     <Compile Remove="Data\Migrations\20201228153307_MotorCultureMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20201228153422_MotorCultureMigration.cs" />
+    <Compile Remove="Data\Migrations\20201228153422_MotorCultureMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
