--- a/WebProgrammingProject/WebProgrammingProject.csproj
+++ b/WebProgrammingProject/WebProgrammingProject.csproj
@@ -16,6 +16,10 @@
     <Compile Remove="Data\Migrations\20201228153307_MotorCultureMigration.Designer.cs" />
     <Compile Remove="Data\Migrations\20201228153422_MotorCultureMigration.cs" />
     <Compile Remove="Data\Migrations\20201228153422_MotorCultureMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210101203227_testMig.cs" />
+    <Compile Remove="Data\Migrations\20210101203227_testMig.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210101204310_testMigr.cs" />
+    <Compile Remove="Data\Migrations\20210101204310_testMigr.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
